----------
v6.2.0-git
----------

[mms] Add ability to create a new filter rule from the contacts dropdown in the
      dynamic view.
[mms] More intelligent sizing of raw message parts opened in a popup window.
[mms] Load sent-mail mailbox list on demand in dynamic view.
[mms] Allow configurable access to remote accounts from within a session
      (Request #8077).
[jan] Display "Other Options" icon instead of "New Window" icon in collapsed
      preview headers.
[mms] More advanced auto-completion for smartmobile view.


----------
v6.1.5-git
----------

[mms] SECURITY: Fix XSS in message and search screens resulting from a
      user-defined flag label (João Machado <geral@jpaulo.eu>).
[mms] Improved UI for dropping attachments on dynamic compose screen.
[mms] Fix manually loading all addresses in a header.
[mms] Fix regression where reloading dynamic view would not load the previously
      selected message.
[mms] Fixed regression in enforcing max_recipients and max_timelimit
      permissions (Bug #12674).
[mms] Correctly enforce file size attachment limits on the first attachment
      (Bug #12663).
[mms] Don't attempt to get quota information from non-IMAP mailboxes (Bug
      #12608).
[jan] Don't attach address book behavior if contacts API is unavailable.
[mms] Fix regression where MIME headers were being displayed for PGP decrypted
      messages (Bug #12648).
[mms] Improved error handling when creating a new flag in dynamic view.
[mms] Make addresses in smartmobile full message header display clickable to
      open a compose window.
[mms] Don't display empty containers in dynamic folder list (Request #11425).


------
v6.1.4
------

[mms] Fix auto-complete of addresses on the dynamic redirect page.
[mms] Fix updating flags in dynamic search view (Bug #12594).
[mms] Use Horde_Smtp to send messages via SMTP.
[mms] Fix applying the 'allow_folders' permission.
[mms] Fix canceling/discarding compose message in basic view (Bug #12555).