@@ -29,6 +29,16 @@ Administration => Configuration and update anything that's highlighted as
 outdated.
 
 
+Upgrading IMP From 6.1.x To 6.2
+=================================
+
+Configuration Options (conf.php)
+--------------------------------
+
+The $conf['contactsimage']['backends'] options has been added.
+
+
+
 Upgrading IMP From 6.1.x To 6.1.4
 =================================
 
